infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
  labels:
    name: ingress-srv
spec:
  rules:
  - host: microservices.dev
    http:
      paths:
      - path: "/api/users/?(.*)"
        pathType: Prefix
        backend:
          service:
            name: auth-srv
            port: 
              number: 3000

      - path: "/api/auth/?(.*)"
        pathType: Prefix
        backend:
          service:
            name: auth-srv
            port: 
              number: 3000

      - path: "/rabbit?(.*)"
        pathType: Prefix
        backend:
          service:
            name: service-rabbitmq
            port: 
              number: 15672

      - path: "/?(.*)"
        pathType: Prefix
        backend:
          service:
            name: client-srv
            port: 
              number: 3000
